--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="ticTacToe.css"> <!-- my local css file -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> <!-- bootstrap files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> <!-- bootstrap theme -->
+    <link rel="icon" href="resources/favicon.ico"> <!-- link for my favicon -->
 </head>
 
 <body>
@@ -14,6 +15,12 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script> <!-- official javascript ui -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> <!-- bootstrap js -->
     <script src="ticTacToe.js"></script> <!-- my local js file -->
+
+    <div class="navbar navbar-custom">
+            <h1 id="wins"></h1>
+        <button type="button" class="myButton btn btn-lg" id="resetWins">Reset Win Counter</button>
+        <button type="button" class="myButton btn btn-lg" id="reset">Reset</button>
+    </div>
 
     <table class="board">
         <tr class="top">
@@ -32,9 +39,6 @@
             <td class="square" id="bottomRight"></td>
         </tr>
     </table>
-    
-    <button type="button" id="reset">Reset</button>
-
 
     </div>
 </body>
