--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -16,21 +16,21 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> <!-- bootstrap js -->
     <script src="ticTacToe.js"></script> <!-- my local js file -->
 
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
-        fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
-
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "08dac190-bf63-41cf-91c2-7004b58729d8", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+    
     <div class="navbar navbar-custom">
         <h1 id="wins"></h1>
         <button type="button" class="myButton btn btn-lg" id="resetWins">Reset Win Counter</button>
         <button type="button" class="myButton btn btn-lg" id="reset">Reset</button>
     </div>
+    <span class='st_sharethis_large' displayText='ShareThis'></span>
+    <span class='st_facebook_large' displayText='Facebook'></span>
+    <span class='st_twitter_large' displayText='Tweet'></span>
+    <span class='st_linkedin_large' displayText='LinkedIn'></span>
+    <span class='st_pinterest_large' displayText='Pinterest'></span>
+    <span class='st_email_large' displayText='Email'></span>
 
     <table class="board">
         <tr class="top">
@@ -49,7 +49,9 @@
             <td class="square" id="bottomRight"></td>
         </tr>
     </table>
-    <div class="fb-share-button" style="text-align:center;margin-top:1%" data-href="https://ryanbrashear.github.io/ticTacToe/ticTacToe.html" data-layout="button_count" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fryanbrashear.github.io%2Fweatherapp%2Fweatherapp.html&amp;src=sdkpreparse">Share</a></div>
+    
+
+
 </body>
 
 </html>
